--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
   "require": {
     "php": "^8.0",
     "monolog/monolog": "^2.5",
-    "symfony/console": "^6.0",
-    "symfony/filesystem": "^6.0",
-    "symfony/event-dispatcher": "^6.0",
-    "symfony/finder": "^6.0",
-    "symfony/yaml": "^6.0",
-    "symfony/process": "^6.0"
+    "symfony/console": "^6.0||^7.0",
+    "symfony/filesystem": "^6.0||^7.0",
+    "symfony/event-dispatcher": "^6.0||^7.0",
+    "symfony/finder": "^6.0||^7.0",
+    "symfony/yaml": "^6.0||^7.0",
+    "symfony/process": "^6.0||^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
